forth/test/fail/test_numeric_prefix_no_digit.af
\ Must fail to compile.
0x_
